// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dataloader > Collection dataloader can be disabled per-query 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (2) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (1)",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (2)",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (3)",
  ],
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (3) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 2))",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 3))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (2)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (3)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`publisher_id\` in (1)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`publisher_id\` in (2)",
  ],
]
`;

exports[`Dataloader > Collection.load 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1, 2, 3) and \`a1\`.\`age\` < 80 and ((\`a0\`.\`author_1_id\` = 1) or (\`a0\`.\`author_1_id\` = 2) or (\`a0\`.\`author_1_id\` = 3))",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 2), (1, 3))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where (\`b0\`.\`author_id\` in (1, 2, 3) or \`b0\`.\`publisher_id\` in (1, 2))",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (1, 2, 3)",
  ],
]
`;

exports[`Dataloader > Collection.load with orderBy 1`] = `
[
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1, 2, 3) order by \`b0\`.\`title\` asc",
  ],
]
`;

exports[`Dataloader > Collection.load with populate 1`] = `
[
  [
    "[query] select \`b0\`.*, \`p1\`.\`id\` as \`p1__id\`, \`p1\`.\`name\` as \`p1__name\`, \`p1\`.\`type\` as \`p1__type\`, \`a2\`.\`id\` as \`a2__id\` from \`book\` as \`b0\` left join \`publisher\` as \`p1\` on \`b0\`.\`publisher_id\` = \`p1\`.\`id\` inner join \`author\` as \`a2\` on \`b0\`.\`author_id\` = \`a2\`.\`id\` and \`a2\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1, 2, 3)",
  ],
]
`;

exports[`Dataloader > Collection.load with where (Many to Many + Inverse side + custom where filters) 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1, 2, 3) and \`a1\`.\`age\` < 80 and ((\`a1\`.\`name\` in ('b', 'd') and \`a0\`.\`author_1_id\` = 1) or (\`a1\`.\`name\` in ('b', 'd') and \`a0\`.\`author_1_id\` = 2) or (\`a1\`.\`name\` in ('b', 'd') and \`a0\`.\`author_1_id\` = 3))",
  ],
]
`;

exports[`Dataloader > Collection.load with where (Many to Many + Inverse side + different custom where filters for each collection) 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1) and \`a1\`.\`age\` < 80 and \`a1\`.\`name\` in ('b', 'd') and \`a0\`.\`author_1_id\` = 1",
  ],
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (2, 3) and \`a1\`.\`age\` < 80 and ((\`a1\`.\`name\` in ('a', 'b', 'c', 'd', 'e') and \`a0\`.\`author_1_id\` = 2) or (\`a1\`.\`name\` in ('a', 'b', 'c', 'd', 'e') and \`a0\`.\`author_1_id\` = 3))",
  ],
]
`;

exports[`Dataloader > Collection.load with where (Many to Many + Inverse side) 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1, 2, 3) and \`a1\`.\`age\` < 80 and ((\`a0\`.\`author_1_id\` = 1) or (\`a0\`.\`author_1_id\` = 2) or (\`a0\`.\`author_1_id\` = 3))",
  ],
]
`;

exports[`Dataloader > Collection.load with where (One to Many) 1`] = `
[
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (2, 3) and \`b0\`.\`title\` in ('One', 'Two', 'Six')",
  ],
]
`;

exports[`Dataloader > Collection.load with wildcard populate 1`] = `
[
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1, 2, 3)",
  ],
  [
    "[query] select \`p0\`.* from \`publisher\` as \`p0\` where \`p0\`.\`id\` in (1, 2)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`publisher_id\` in (1, 2)",
  ],
]
`;

exports[`Dataloader > Dataloader can be globally enabled for Collections with true, DataloaderType.ALL, DataloaderType.COLLECTION 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1, 2, 3) and \`a1\`.\`age\` < 80 and ((\`a0\`.\`author_1_id\` = 1) or (\`a0\`.\`author_1_id\` = 2) or (\`a0\`.\`author_1_id\` = 3))",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 2), (1, 3))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where (\`b0\`.\`author_id\` in (1, 2, 3) or \`b0\`.\`publisher_id\` in (1, 2))",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (1, 2, 3)",
  ],
]
`;

exports[`Dataloader > Dataloader can be globally enabled for References with true, DataloaderType.ALL, DataloaderType.REFERENCE 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` in (1, 2)",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where ((\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 2) or (\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 3) or (\`c0\`.\`owner_id\` = 3 and \`c0\`.\`recipient_id\` = 1))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` in (5, 3, 4)",
  ],
]
`;

exports[`Dataloader > Dataloader should not be globally enabled for Collections with false, DataloaderType.NONE, DataloaderType.REFERENCE 1`] = `
[
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (1) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (2) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (1)",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (2)",
  ],
  [
    "[query] select \`c0\`.*, \`r1\`.\`id\` as \`r1__id\`, \`o2\`.\`id\` as \`o2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`r1\` on \`c0\`.\`recipient_id\` = \`r1\`.\`id\` and \`r1\`.\`age\` < 80 inner join \`author\` as \`o2\` on \`c0\`.\`owner_id\` = \`o2\`.\`id\` and \`o2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (3)",
  ],
  [
    "[query] select \`a0\`.\`author_2_id\`, \`a0\`.\`author_1_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_2_id\` = \`a1\`.\`id\` where \`a0\`.\`author_1_id\` in (3) and \`a1\`.\`age\` < 80",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 2))",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 3))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (1)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (2)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`author_id\` in (3)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`publisher_id\` in (1)",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`publisher_id\` in (2)",
  ],
]
`;

exports[`Dataloader > Dataloader should not be globally enabled for References with false, DataloaderType.NONE, DataloaderType.COLLECTION 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` = 1 limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((1, 2)) limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((1, 3)) limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((3, 1)) limit 1",
  ],
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` = 2 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 5 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 3 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 4 limit 1",
  ],
]
`;

exports[`Dataloader > Reference dataloader can be disabled per-query 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` = 1 limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((1, 2)) limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((1, 3)) limit 1",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where (\`c0\`.\`owner_id\`, \`c0\`.\`recipient_id\`) in ((3, 1)) limit 1",
  ],
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` = 2 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 5 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 3 limit 1",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` = 4 limit 1",
  ],
]
`;

exports[`Dataloader > Reference.load 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` in (1, 2)",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where ((\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 2) or (\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 3) or (\`c0\`.\`owner_id\` = 3 and \`c0\`.\`recipient_id\` = 1))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` in (5, 3, 4)",
  ],
]
`;

exports[`Dataloader > getColBatchLoadFn 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` left join \`author_buddies\` as \`a1\` on \`a0\`.\`id\` = \`a1\`.\`author_2_id\` where \`a0\`.\`age\` < 80 and \`a1\`.\`author_1_id\` in (1, 2, 3)",
  ],
  [
    "[query] select \`m0\`.* from \`message\` as \`m0\` where (\`m0\`.\`chat_owner_id\`, \`m0\`.\`chat_recipient_id\`) in ((1, 2), (1, 3))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where (\`b0\`.\`author_id\` in (1, 2, 3) or \`b0\`.\`publisher_id\` in (1, 2))",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where \`c0\`.\`owner_id\` in (1, 2, 3)",
  ],
  [
    "[query] select \`a0\`.\`author_1_id\`, \`a0\`.\`author_2_id\`, \`a1\`.\`id\` as \`a1__id\`, \`a1\`.\`name\` as \`a1__name\`, \`a1\`.\`age\` as \`a1__age\`, \`a1\`.\`email\` as \`a1__email\` from \`author_buddies\` as \`a0\` inner join \`author\` as \`a1\` on \`a0\`.\`author_1_id\` = \`a1\`.\`id\` where \`a0\`.\`author_2_id\` in (2, 5, 1) and \`a1\`.\`age\` < 80",
  ],
]
`;

exports[`Dataloader > getRefBatchLoadFn 1`] = `
[
  [
    "[query] select \`a0\`.* from \`author\` as \`a0\` where \`a0\`.\`age\` < 80 and \`a0\`.\`id\` in (1, 2)",
  ],
  [
    "[query] select \`c0\`.*, \`o1\`.\`id\` as \`o1__id\`, \`r2\`.\`id\` as \`r2__id\` from \`chat\` as \`c0\` inner join \`author\` as \`o1\` on \`c0\`.\`owner_id\` = \`o1\`.\`id\` and \`o1\`.\`age\` < 80 inner join \`author\` as \`r2\` on \`c0\`.\`recipient_id\` = \`r2\`.\`id\` and \`r2\`.\`age\` < 80 where ((\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 2) or (\`c0\`.\`owner_id\` = 1 and \`c0\`.\`recipient_id\` = 3) or (\`c0\`.\`owner_id\` = 3 and \`c0\`.\`recipient_id\` = 1))",
  ],
  [
    "[query] select \`b0\`.*, \`a1\`.\`id\` as \`a1__id\` from \`book\` as \`b0\` inner join \`author\` as \`a1\` on \`b0\`.\`author_id\` = \`a1\`.\`id\` and \`a1\`.\`age\` < 80 where \`b0\`.\`id\` in (5, 3, 4)",
  ],
]
`;
